# g.c.l.a.w

./: .env.example  .firebaserc  .gcloudignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cloudbuild.yaml  pyproject.toml  schedule-loop-observability.txt  schedule-loop.txt  user.md
.github/: BRANCH_PROTECTION.md
.github/workflows/: auto-address.yml  auto-fix.yml  auto-merge.yml  claude-code-review.yml  deploy.yml
.swarm/: state.json
agents/: agent-architect.md  comms-mgr.md  content-apex.md  content-mgr.md  content-scott.md  dev-mgr.md  home-mgr.md  orchestrator.md  profile-mgr.md  research-mgr.md  workspace-mgr.md
benchmarks/: bench_observability.py
crons/: heartbeat.json  price_sync.json  vertex_scoring.json
docs/: OVERLAY.md  SECRETS_MIGRATION.md  USER_STORIES.md
docs/adr/: 0001-selective-adoption-of-agents-cli.md  0002-agent-architect-for-in-process-creation.md  0003-bigquery-agent-analytics.md  0004-prompt-response-logging-gcs.md  0005-evalset-framework.md  0006-architect-uses-eval-feedback-loop.md  README.md
docs/perf/: observability-bench.md
docs/research/: 2026-04-11-cloud-run-memory-validation.md  2026-04-11-generative-ai-samples-survey.md  2026-04-11-multi-agent-adk-validation.md  README.md
docs/superpowers/plans/: 2026-03-30-gclaw-crons-heartbeat.md  2026-03-30-gclaw-foundation.md  2026-03-31-gclaw-a2a-onboarding.md  2026-03-31-gclaw-memory-skills.md  2026-03-31-gclaw-voice-dashboard.md  2026-03-31-gclaw-web-auth.md  2026-04-03-multi-model-routing.md  2026-04-04-multi-provider-routing.md  README.md  (+1 more)
infra/phoenix/: Dockerfile  README.md  cloudbuild.yaml
infra/vertex-models/: README.md  deploy-gemma4.sh  deploy-nemotron.sh
scripts/: bootstrap-bq-analytics.sh  bootstrap-firebase.sh  bootstrap-gcp.sh  bootstrap-phoenix.sh  deploy.sh  extract-personal-overlay.sh  migrate_openclaw_crons.py  otel_smoke.py  seed-secrets.sh
skills/adk-patterns/: SKILL.md
skills/code-review/: examples.md  instructions.md  skill.json
skills/content-quality-gate/: SKILL.md
skills/debug/: SKILL.md
skills/dev-pipeline/: SKILL.md
skills/devils-advocate/: SKILL.md
skills/email-drafter/: examples.md  instructions.md  skill.json
skills/gclaw-conventions/: SKILL.md
skills/gcp-audit/: SKILL.md  instructions.md  skill.json  spec.md
skills/handoff/: SKILL.md
skills/humanizer/: SKILL.md
skills/lyons-blog-pipeline/: SKILL.md
skills/morning-briefing/: examples.md  instructions.md  skill.json
skills/nano-banana-prompting/: README.md  SKILL.md  _meta.json
skills/skill-audit/: SKILL.md
skills/ui-ux-designer/: SKILL.md
soul/: agent-architect.md  base.md  comms.md  content-apex.md  content-scott.md  content.md  dev.md  home.md  profile.md  research.md  workspace.md
src/gclaw/: __init__.py  main.py  settings.py
tests/: _catalog_fakes.py  _tool_catalog_fakes.py  conftest.py  test_adk_builder_gemini_routing.py  test_admin_delete_task.py  test_admin_force_fail_task.py  test_admin_heartbeat_endpoints.py  test_admin_manual_trigger.py  test_admin_routes.py  test_admin_transports_endpoint.py  test_agent_architect_tools.py  test_agent_config_admin_routes.py  test_agent_config_service.py  test_agent_factory.py  test_agent_factory_override.py  test_agent_model_picker.py  test_agent_override_model.py  test_agent_override_repo.py  test_agent_runner_messages.py  test_agent_runner_records_usage.py  test_api.py  test_architect_eval_integration.py  test_auth.py  test_auth_api.py  test_blob_store.py  test_board_approval_routes.py  test_board_create_task_route.py  test_board_repo.py  test_board_service.py  test_board_status_route.py  test_board_sweep_stalled.py  test_board_transitions.py  test_bq_analytics.py  test_catalog_admin_routes.py  test_catalog_model.py  test_catalog_router_loader.py  test_catalog_service.py  test_catalog_sm.py  test_chat_agent_routing.py  test_chat_history_route.py  (+143 more)
tests/fixtures/: sample_openapi.yaml
web/: .dockerignore  .env.local.example  Dockerfile  cloudbuild.yaml  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/__tests__/: api-client.test.ts  auth-context.test.tsx  board-view.test.tsx  chat-view.test.tsx  connections-view.test.tsx  live-widgets.test.tsx  onboarding-wizard.test.tsx  voice-client.test.ts
web/public/: manifest.json  sw.js
(+314 files in other folders)
