[project]
name = "gclaw"
version = "0.1.0"
description = "Personal AI agent platform on Google stack"
requires-python = ">=3.10"
dependencies = [
    "google-adk[extensions]>=1.0.0",
    "google-cloud-firestore>=2.19.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "firebase-admin>=6.4.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "google-cloud-secret-manager>=2.20.0",
    # Observability (Phase 1 — OBSERVABILITY_ENABLED gates activation)
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-gcp-trace>=1.7.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "openinference-semantic-conventions>=0.1.14",
    "openinference-instrumentation-google-adk>=0.1.0",
    "openinference-instrumentation-litellm>=0.1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gclaw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
