[project]
name = "gclaw"
version = "0.4.0"
description = "Multi-agent AI orchestration platform built on Google ADK + Gemini, with kanban board coordination, Memory Bank long-term recall, and a tool/skill registry."
authors = [
    { name = "Scott Benson" },
]
# `readme = "README.md"` and `license = { file = "LICENSE" }` are wired
# in a follow-up PR once those files land (see #10) to keep hatchling
# build validation passing on this branch.
keywords = [
    "ai-agents",
    "llm-orchestration",
    "google-adk",
    "gemini",
    "vertex-ai",
    "firestore",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "google-adk[extensions]>=1.0.0",
    "google-cloud-firestore>=2.19.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "firebase-admin>=6.4.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "google-cloud-secret-manager>=2.20.0",
    # Observability (Phase 1 — OBSERVABILITY_ENABLED gates activation)
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-gcp-trace>=1.7.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "openinference-semantic-conventions>=0.1.14",
    "openinference-instrumentation-google-adk>=0.1.0",
    "openinference-instrumentation-litellm>=0.1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/Skobyn/gclaw"
Repository = "https://github.com/Skobyn/gclaw"
Issues = "https://github.com/Skobyn/gclaw/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gclaw"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
